Bug/Fix Update Book Method
